# HyperClaw-Max

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Implementation Blueprint.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml
adapters/gitnexus/: README.md
agents/: PACK-MANIFEST.yaml  README.md
agents/codex/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
agents/finance/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
agents/hk/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
agents/legal/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
agents/main/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
agents/pa/: AGENTS.md  BOOTSTRAP.md  README.md  TOOLS.md
config/: openclaw.public.example.jsonc
config/secrets/: README.md
docs/: ARCHITECTURE.md  BOUNDARIES.md  BOUNDARY-AUDIT.md  CLI.md  EXTRACTION-MAP.md  HOSTING-AND-DEPENDENCIES.md  MEMORY-FABRIC.md  OPERATIONAL-FABRIC.md  PRIVACY-AND-SECRETS.md  ROADMAP.md
docs/phases/: PHASE-1-CONTEXT-INTEL-EXTRACTION-20260310.md  PHASE-2-PRODUCT-SURFACE-20260310.md  PHASE-3-GRANT-GO-READINESS-20260310.md  PHASE-4-TRUST-LAYER-20260310.md
docs/plans/: 2026-03-12-public-product-readiness.md
docs/vision/: building-the-brain.md
examples/: README.md
examples/outputs/: clinic.json  context-pack.json  doctor.json  privacy-check.json  scorecard.json
examples/quickstart/: README.md
fixtures/context_intel/: canonical-cases-v1.jsonl  failure-clinic-cases-v1.jsonl  output-contract-v1.schema.json
fixtures/ops_fabric/: active-tasks.sample.json  delegations.sample.json  system-operational-watchdog.sample.json
install/: ONBOARDING.md
install/connectors/: README.md  calendar-push.env.example  gmail-watch.env.example  http-hook.env.example  telegram.env.example
install/overlay/: README.md
install/systemd/: README.md  openclaw-gateway.service
schemas/ops_fabric/: active-tasks.schema.json  delegations.schema.json  system-operational-watchdog.schema.json
tests/: README.md  test_boundary_audit.py  test_clinic.py  test_feedback_store.py  test_first_run.py  test_materialize_pack.py  test_ops_fabric.py  test_pack.py  test_runtime_validate.py  test_symbol_slice.py
(+16 files in other folders)
